# pytest-xfailer

./: README.md  pyproject.toml
src/pytest_xfailer/: __init__.py
